no, now actually fix align blooming hill imgs
gave up and made a cropped version of the ing that had a border.

then put a max-width div around the other ing to they line up.

then adding some top padding to give some space between.

--- a/css/style.css
+++ b/css/style.css
@@ -191,23 +191,17 @@ nav.fixed{
     line-height: 1.8em;
 }
 
-#venue div{
-    
-    padding: 5px;
-    overflow: hidden;
-}
-
 #venue p {
     line-height: 1.6em;
 }
 
-#Blooming-Hill-img-1 {
-    margin-left: -5px;
+#venue img{
+    margin-top: 5px;
 }
 
-#Blooming-Hill-img-2 {
-    margin-left: 0;
-    max-width: 750px;
+#blooming-hill-img-2-container {
+    padding-top: 5px;
+    max-width: 748px;
 }
 
 
@@ -248,7 +242,6 @@ div {
         text-align: right;
         padding-top: 1em;
 }
-
 
 
 
